--- a/mk00_rmarkdown-exercises.Rmd
+++ b/mk00_rmarkdown-exercises.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Reproducible Reporting With R Markdown"
+title: "Getting Started With R Markdown"
 comment: "*building reproducible reports*"
 output: 
   html_document: 
@@ -33,11 +33,11 @@ knitr::opts_chunk$set(warning = FALSE,
 
 # Objectives
 
-This document provides some exercises to improve your understanding of R Markdown. Please see the [accompanying slides](https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html) for more information.
+This section provides some exercises to improve your understanding of R Markdown. Please see the [accompanying slides](https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html) for more information.
 
 ## Create a new R Markdown file {.tabset}
 
-We will start by creating a new R Markdown file, and set it to create an HTML document.
+We will start by creating a new R Markdown file, and set it to create an HTML document. **When you save your new .Rmd file, be sure to delete all the text beneath the YAML header in your new .Rmd document**
 
 ### New File icon
 
@@ -57,15 +57,12 @@ knitr::include_graphics("img/new-rmarkdown-02.png")
 
 ### Save your .Rmd file
 
-We will need to save our `.Rmd` file before we can knit it, so we'll save it in the same directory as this `rmarkdown-solutions.html` file.
+We will need to save our `.Rmd` file before we can knit it, so we'll save it in the same directory as this `rmarkdown-solutions.html` file. 
 
 ```{r save-rmd-file-02, echo = FALSE, out.height="65%", out.width="65%", fig.align='center'}
 knitr::include_graphics("img/save-rmd-file-02.png")
 ```
 
-**Be sure to delete all the text beneath the YAML header in your new .Rmd document**
-
-------------------------------------------------------------------------
 
 ## RMarkdown: YAML {.tabset}
 
@@ -83,8 +80,6 @@ date: "10/24/2020"
 output: html_document
 ---
 ```
-
-**Be sure to delete all the text beneath the YAML header in your new .Rmd document**
 
 ### Table of Contents (TOC)
 
@@ -144,7 +139,7 @@ Note that we've loaded these data using the parameters we've defined above.
 StarWars <- readr::read_rds(file = params$data_dir)
 ```
 
-### Star Wars Data (Help)
+### Help files
 
 Details about the variables in the `StarWars` dataset are accessible in RStudio's help files, which we can access using `??starwars`
 
@@ -157,7 +152,7 @@ Details about the variables in the `StarWars` dataset are accessible in RStudio'
 
 When we read the help file, we find there are three variables that are lists: `films`, `vehicles`, and `starships`. We have list-columns because the Star Wars API exports data as a JSON file, which is not tabular (like a spreadsheet).
 
-### Star Wars Data (`glimpse`)
+### `dplyr::glimpse()`
 
 We can see a basic transposed display of the `StarWars` data with `dplyr`'s `glimpse()` function. 
 
@@ -167,7 +162,7 @@ dplyr::glimpse(StarWars)
 
 `glimpse()` shows us the format and first few values of each variable in `StarWars`.
 
-### Star Wars Data (`skimr`)
+### `skimr::skim()`
 
 Below is a `skimr::skim()` view of the `StarWars` data. We can see each variable broken down by type, along with some summary information.
 
@@ -177,7 +172,7 @@ skimr::skim(StarWars)
 
 The `skimr` package is great for looking at large data summaries. Read more [here](https://docs.ropensci.org/skimr/).
 
-### Star Wars (`listviewer`)
+### `listviewer::jsonedit()`
 
 If you have JSON or lists (non-rectangular data) in R, sometimes these objects can be hard to visualize. The `jsonedit()` function from `listviewer` makes this easier by giving us an interactive display to click-through.
 
@@ -201,7 +196,7 @@ StarWars <- readr::read_rds(file = params$data_dir)
 
 Re-knit this chunk with the new `cache` option.
 
-### Dataset Size 
+### Checking dataset size 
 
 We can determine the size of our dataset using `object.size()` from the `utils` package (which is loaded by default).
 
@@ -221,7 +216,7 @@ inspectdf::inspect_mem(df1 = StarWars) %>%
 We can see from the data visualization that the list variables are accounting for most of the memory.
 
 
-### Caching Data
+### Caching data
 
 Including the `cache=TRUE` option stores the `StarWars` data, so that R holds the data in memory until the `StarWars` import chunk is changed. Sometimes we will only want to analyze a subset of a dataset, so it makes sense to cache the larger dataset import chunk. 
 
@@ -261,7 +256,7 @@ inspectdf::inspect_mem(df1 = StarWars, df2 = StarWarsSmall) %>%
   inspectdf::show_plot(text_labels = TRUE, col_palette = 1)
 ```
 
-### Cache Path
+### Cache path
 
 When we cache data, a new folder named `your-file-name` + `_cache` is created in the same directory as our R Markdown file. We can see the `rmarkdown-exercises_cache/` folder contents below: 
 
@@ -291,7 +286,7 @@ knitr::opts_chunk$set(cache = TRUE,
 ```
 ````
 
-### Dependent Chunks
+### Dependent chunks
 
 Data analysis and exploration typically moves along in a (somewhat) linear fashion, which means our code chunks should be run sequentially. Sometimes this isn't true, and we need some code chunks to depend on other, specific code chunks. In this case, we can use the `dependson` option in our code chunk. 
 
@@ -312,14 +307,14 @@ Now the `inspect_mem-StarWars-StarWarsSmall` will only execute *after* the `Star
 
 Graphs and figures are great tools for communicating results, and we want to keep track of all the visualizations we create in our report. R Markdown comes with multiple options for controlling the size, location, and quality of images in our reports. 
 
-### Figure Size
+### Figure size
 
-We can adjust the size of our figures with `fig.height=` or `fig.width=`. These both take numeric values, and control the width and height of the figure in inches.
+We can adjust the size of our figures with `fig.height=` or `fig.width=`. These both take numeric values, and control the dimensions of the figure in inches. We can also control the size with `out.width=` and `out.height=`.
 
 Below we visualize the average BMI by `species` and `gender` in the Star Wars universe. We also load the [`hrbrthemes` package](https://cinc.rud.is/web/packages/hrbrthemes/) to give us more control over the aesthetics in our plot. 
 
 ````md
-```{r gg_avg_bmi_spec_gend, fig.height=5.5, fig.width=8}`r ''`
+```{r gg_avg_bmi_spec_gend, fig.height=5.5, fig.width=8, out.width='100%', out.height='100%'}`r ''`
 library(hrbrthemes)
 StarWars %>% 
   dplyr::filter(!is.na(mass) & !is.na(height) & !is.na(species)) %>% 
@@ -373,17 +368,15 @@ gg_avg_bmi_spec_gend
 
 We can see this figure fits the page well because we are able to control the size of the height and width. 
 
-### Figure Location
+### Figure location
 
 Now that we've created a few figures, we can see how these get stored to be used in the final .html file. Much like the default `cache` settings, when we create graphs in R Markdown, a default folder is created that is `your-file-name` + `_files`, and a subfolder `figure-html` contains the images for the document. 
 
-The file path for `rmarkdown-exercises_files` is below: 
+We can see the figure we created above `gg_avg_bmi_spec_gend` in the `figure-html` folder below:
 
-```{r rmarkdown-exercises_files, echo=FALSE}
-fs::dir_ls("img", regexp = "StarWarsDataModel.png")
+```{r rmarkdown-figure-files, echo=FALSE}
+fs::dir_tree("mk00_rmarkdown-exercises_files/figure-html", regexp = "gg_avg_bmi_spec_gend")
 ```
-
-We can see the three graphs we've created in the `figure-html/` subfolder. 
 
 We can also manually specify where we want the figures saved with `fig.path=`. If we're setting a folder for the figures, we can do it in the code chunk, 
 
@@ -444,7 +437,7 @@ StarWarsDataModel %>%
 ```
 
 
-### Interactive Figures 
+### Interactive figures 
 
 The biggest benefit to using HTML is the ability to create interactive graphs. One example comes from the [`plotly` package](https://github.com/ropensci/plotly#readme). 
 
