--- a/slides.Rmd
+++ b/slides.Rmd
@@ -4,13 +4,21 @@ title: "Slides"
 
 ### View these slide decks in your bowser or save as PDFs
 
-+ [Reproducible Data Analysis With R](https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html)
+1. [Introduction to R Programming](https://mjfrigaard.github.io/intro-to-r-programming/Index.html#1)
 
-+ [Data Manipulation with R: An introduction to the dplyr package](https://mjfrigaard.github.io/data-manip-intro/Index.html)
+2. [R Workflow Best Practices](https://mjfrigaard.github.io/r-workflow-best-practices/Index.html#1)
 
-+ [Data Reshaping in R: reshaping, transforming, and joining data in R](https://mjfrigaard.github.io/data-transformations-joins/Index.html)
+3. [Reproducible Data Analysis With R](https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html#1)
 
-+ [Introduction to Data Visualization with ggplot2](https://mjfrigaard.github.io/data-viz-intro/Index.html#1)
+4. [Data Manipulation with R](https://mjfrigaard.github.io/data-manip-intro/Index.html#1)
 
-+ [Data Visualization as Communication](https://mjfrigaard.github.io/data-viz-as-comm/Index.html)
+5. [Data Reshaping in R](https://mjfrigaard.github.io/data-transformations-joins/Index.html#1)
+
+6. [Introduction to Data Visualization with ggplot2](https://mjfrigaard.github.io/data-viz-intro/Index.html#1)
+
+7. [Data Visualization as Communication](https://mjfrigaard.github.io/data-viz-as-comm/Index.html#1)
+
+8. [Introduction to Dashboards](https://mjfrigaard.github.io/intro-to-dashboards/Index.html#1)
+
+9. [Introduction to Shiny Apps](https://mjfrigaard.github.io/intro-to-shiny/Index.html#1)
 
