--- a/dt00_data-manipulations.Rmd
+++ b/dt00_data-manipulations.Rmd
@@ -29,7 +29,13 @@ original_starwars <- read_csv("https://bit.ly/3qgjqSC")
 
 # Objectives 
 
-This document outlines some common data manipulation tasks with `dplyr`. The slides for this presentation are [here](https://mjfrigaard.github.io/data-manip-intro/Index.html#1). There is also an accompanying RStudio.Cloud project [here.](https://rstudio.cloud/project/1918833) 
+This lesson outlines some common data manipulation tasks with `dplyr`. 
+
+# Materials
+
+The slides for this presentation are [here](https://mjfrigaard.github.io/data-manip-intro/Index.html#1). 
+
+There is also an accompanying RStudio.Cloud project [here.](https://rstudio.cloud/project/1918833) 
 
 
 Read more about `dplyr` [here](https://dplyr.tidyverse.org/index.html) on the tidyverse website, or in the [Data Transformation](https://r4ds.had.co.nz/transform.html) chapter of R for Data Science. 
