--- a/dt01_data-trans-joins-exercises.Rmd
+++ b/dt01_data-trans-joins-exercises.Rmd
@@ -26,9 +26,13 @@ knitr::opts_chunk$set(warning = FALSE,
 
 # Objectives 
 
-This document outlines some common data reshaping tasks with `tidyr`. The slides for this presentation are [here](https://mjfrigaard.github.io/data-transformations-joins/Index.html#1)
+This document outlines some common data reshaping tasks with `tidyr`. 
 
-There is also an accompanying RStudio.Cloud project: 
+# Materials
+
+The slides for this presentation are [here](https://mjfrigaard.github.io/data-transformations-joins/Index.html#1)
+
+There is also an accompanying [RStudio.Cloud project](https://rstudio.cloud/project/1941654) 
 
 Read more about `dplyr` [here](https://dplyr.tidyverse.org/index.html) and [`tidyr`](https://tidyr.tidyverse.org/) on the tidyverse website, or in the [Data Transformation](https://r4ds.had.co.nz/transform.html) chapter of R for Data Science. 
 
