--- a/gg00_intro-to-data-viz.Rmd
+++ b/gg00_intro-to-data-viz.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction to Data Visualization with ggplot2"
-comment: "*introducing the grammar of graphics (ggplot2)*"
+comment: "*an introduction to the grammar of graphics*"
 output: 
   html_document: 
     toc: yes
@@ -37,7 +37,7 @@ This document outlines and introduction to data visualization with `ggplot2`.
 
 The slides for this presentation are [here](https://mjfrigaard.github.io/data-viz-intro/Index.html)
 
-There is also an accompanying RStudio.Cloud project:
+There is also an accompanying [RStudio.Cloud project](https://rstudio.cloud/project/1973650)
 
 # Previous lessons
 
