--- a/slides.Rmd
+++ b/slides.Rmd
@@ -22,3 +22,10 @@ title: "Slides"
 
 9. [Introduction to Shiny Apps](https://mjfrigaard.github.io/intro-to-shiny/Index.html#1)
 
+### Roadmap
+
+Below is a roadmap for the lessons and materials: 
+
+```{r img-r-trainings-roadmapsvg, echo=FALSE}
+knitr::include_graphics("https://raw.githubusercontent.com/mjfrigaard/r-meetup-tutorials/837785fb1ab806d047bab2fa9c799966e7f9e75a/img/r-trainings-roadmap.svg")
+```
