--- a/bk00_functions-and-objects.Rmd
+++ b/bk00_functions-and-objects.Rmd
@@ -83,7 +83,6 @@ vec_character <- c("A", "B", "C")
 vec_character
 ```
 
-
 ## Evaluating vectors {.tabset}
 
 **Store and explore** - create an object, perform an operation on the object, store the results, then explore the contents with another function.
@@ -144,6 +143,100 @@ Check character vectors with `is.character()`
 ```{r is.character}
 is.character(vec_character)
 ```
+
+## Vectorized {.tabset}
+
+R is often referred to as a "vector-oriented", "vectorized", or "element-wise" language because of the way it deals with vectors. We will show an example of this behavior below: 
+
+### Create sequence of values 
+
+THe code below creates a sequence of ten values between `1.5` and `10.5`.
+
+```{r vec_seq_01}
+vec_seq_01 <- 1.5:10.5
+length(vec_seq_01)
+vec_seq_01
+```
+
+### Vector operation by position 
+
+Now we create `vec_seq_02`, which has a sequence of ten values between `0.2` and `2.0`.
+
+```{r vec_seq_02}
+vec_seq_02 <- c(0.2, 0.4, 0.6, 0.8, 1.0,
+                1.2, 1.4, 1.6, 1.8, 2.0)
+vec_seq_02
+```
+
+Now we subtract `vec_seq_02` from `vec_seq_01`:
+
+```{r vec_seq_01-vec_seq_02}
+vec_seq_01 - vec_seq_02
+```
+
+The result is a vector that's the subtraction of the first element of `vec_seq_02` from the first element of `vec_seq_01`, and so on...
+
+```{r vectorized}
+vec_seq_01[1] - vec_seq_02[1] 
+vec_seq_01[2] - vec_seq_02[2] 
+vec_seq_01[3] - vec_seq_02[3] 
+```
+
+### unequal lengths
+
+Both `vec_seq_01` and `vec_seq_02` have equal lengths. What happens when we apply vectorized operations to objects of unequal length? Well, R attempts to recycle the operations. We will demonstrate this by creating `vec_seq_03`, which only has three numbers in it:
+
+```{r vec_seq_03}
+vec_seq_03 <- vec_seq_02[1:3]
+vec_seq_03
+```
+
+When we try to subtract `vec_seq_03` from `vec_seq_01` we get the following error:
+
+```{r unequal-length}
+vec_seq_01 - vec_seq_03
+```
+
+This is telling us R attempted to subtract each element by position, but ran out of numbers. 
+
+That's why the first three numbers of `vec_seq_01 - vec_seq_03` look identical to `vec_seq_01 - vec_seq_02`:
+
+```{r compare-subtraction-1}
+# compare first three elements
+vec_seq_01[1:3] - vec_seq_02[1:3]
+# compare first three elements
+vec_seq_01[1:3] - vec_seq_03[1:3]
+```
+
+But when R goes looking elements at position `vec_seq_03[4]`, it finds nothing (`NA`):
+
+```{r nothing-in-vec_seq_03}
+vec_seq_03[4]
+```
+
+So it recycles at the beginning of the vector again. Look at the code below to see how this behavior creates the values in `vec_seq_01 - vec_seq_03`.
+
+```{r recycle-vectors}
+vec_seq_01 - vec_seq_03
+vec_seq_01[1:3] - vec_seq_03[1:3]
+vec_seq_01[4:6] - vec_seq_03[1:3]
+vec_seq_01[7:9] - vec_seq_03[1:3]
+```
+
+Where does the `10.3` come from? That is what's left over (and why we get the error message).
+
+```{r left-over-value}
+vec_seq_01[10] - vec_seq_03[1]
+```
+
+If `vec_seq_01` had a length that was a multiple of `vec_seq_03`, R would've still performed recycling (but without an error message).
+
+```{r unequal-length-multiple}
+vec_seq_04 <- vec_seq_02[1:5]
+vec_seq_01 - vec_seq_04
+```
+
+
 
 ## S3 vectors {.tabset}
 
